fix: manage overflow

--- a/cms/src/main.css
+++ b/cms/src/main.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind utilities;
 
-body { 
+html, body { 
     margin: 0;
+    padding: 0;
+    overflow-y: hidden;
 }
